k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: organix-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: organix-app
  template:
    metadata:
      labels:
        app: organix-app
    spec:
      containers:
      - name: organix-app
        image: localhost:5000/organix-app:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
