k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: organix-service
spec:
  type: NodePort
  selector:
    app: organix-app
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30000
