k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: organix-app-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: organixapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: organix-app
                port:
                  number: 80
